Menu Fix,  Images Fix, Delete Our Team Index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
-<html dir="ltr" lang="es-ES">
+<html dir="ltr" lang="es">
 
 <head>
     <title>Adisa</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-        content="Empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.">
+    <meta name="description" content="Empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.">
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
@@ -147,7 +146,7 @@
                         <li class="cool-link_3 active"><a href="index.html">Inicio</a></li>
                         <li class="cool-link_3"><a href="about_us.html">Acerca de Nosotros</a></li>
                         <li class="cool-link_3"><a href="products-services.html">Servicios y Productos</a></li>
-                        <li class="cool-link_3"><a href="conctact.html">Contacto</a></li>
+                        <li class="cool-link_3"><a href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -387,120 +386,6 @@
     </section>
     <!-- BG + Text _3 End -->
 
-    <!-- Our Team Start -->
-    <section id="our_team_3" class="p-t-90 m-b-90">
-        <div class="container">
-            <div class="row p-b-60">
-                <div class="col-md-12">
-                    <div class="heading">
-                        <div class="heading_border bg_red"></div>
-                        <p>DON'T TAKE OUR WORD</p>
-                        <h2>Our <span class="color_red">Team</span></h2>
-                    </div>
-                </div>
-            </div>
-
-            <div id="our_team_slider_3" class="owl-carousel">
-
-                <div class="item">
-
-                    <div class="single-effect">
-                        <figure class="wpf-demo-gallery">
-                            <a href="#"><img src="images/team_1.jpg" alt="img"></a>
-                            <figcaption class="view-caption">
-                                <a href=".team"><i class="icon-focus"></i></a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="team_text">
-                        <h3>Stepthen Adams</h3>
-                        <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
-                            ultrices venenatis mauris.</p>
-                        <a href=".team">Read More</a>
-                    </div>
-
-                </div>
-
-                <div class="item">
-
-                    <div class="single-effect">
-                        <figure class="wpf-demo-gallery">
-                            <a href=".team"><img src="images/team_2.jpg" alt="img"></a>
-                            <figcaption class="view-caption">
-                                <a href=".team"><i class="icon-focus"></i></a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="team_text">
-                        <h3>Stepthen Adams</h3>
-                        <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
-                            ultrices venenatis mauris.</p>
-                        <a href=".team">Read More</a>
-                    </div>
-
-                </div>
-
-                <div class="item">
-
-                    <div class="single-effect">
-                        <figure class="wpf-demo-gallery">
-                            <a href=".team"><img src="images/team_3.jpg" alt="img"></a>
-                            <figcaption class="view-caption">
-                                <a href=".team"><i class="icon-focus"></i></a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="team_text">
-                        <h3>Stepthen Adams</h3>
-                        <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
-                            ultrices venenatis mauris.</p>
-                        <a href=".team">Read More</a>
-                    </div>
-
-                </div>
-
-                <div class="item">
-
-                    <div class="single-effect">
-                        <figure class="wpf-demo-gallery">
-                            <a href=".team"><img src="images/team_4.jpg" alt="img"></a>
-                            <figcaption class="view-caption">
-                                <a href=".team"><i class="icon-focus"></i></a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="team_text">
-                        <h3>Stepthen Adams</h3>
-                        <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
-                            ultrices venenatis mauris.</p>
-                        <a href=".team">Read More</a>
-                    </div>
-
-                </div>
-
-                <div class="item">
-
-                    <div class="single-effect">
-                        <figure class="wpf-demo-gallery">
-                            <a href=".team"><img src="images/team_5.jpg" alt="img"></a>
-                            <figcaption class="view-caption">
-                                <a href=".team"><i class="icon-focus"></i></a>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="team_text">
-                        <h3>Stepthen Adams</h3>
-                        <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
-                            ultrices venenatis mauris.</p>
-                        <a href=".team">Read More</a>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- Our Team end -->
 
     <!-- Testinomial Start -->
     <section id="testimonials" class="p-t-100 p-b-100 bg_gray">
@@ -637,11 +522,11 @@
                             </div>
                             <div class="adres_box">
                                 <p><i class=" icon-alarmclock"></i></p>
-                                <p>Mon to Fri - 08:00 to 16:30</p>
+                                <p>Lunes a Sábado - 08:00 to 16:30</p>
                             </div>
                             <div class="adres_box">
                                 <p><i class="icon-icons74"></i></p>
-                                <p>Manhattan Hall, Lacasa Ave Melbo urne, 124BP Australia</p>
+                                <p>De Los Pelícanos 04, Las Alamedas, Ciudad López Mateos, Méx.</p>
                             </div>
                         </div>
                     </div>
