--- a/products-services.html
+++ b/products-services.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
-<html dir="ltr" lang="en">
+<html dir="ltr" lang="es">
 
 <head>
-    <title>Copious / Solution</title>
+    <title>Adisa / Productos y Servicios</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+
+    <meta name="description" content="Empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.">
+    
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
@@ -75,10 +76,10 @@
                         <div class="get-tuch text-left"><i class="icon-telephone114"></i>
                             <ul>
                                 <li>
-                                    <h4>+1(123) 456 567</h4>
+                                    <h4>+01(52) 55 5236 1203</h4>
                                 </li>
                                 <li>
-                                    <p class="p_14">support@copious.com</p>
+                                    <p class="p_14">contacto@adimex.com.mx</p>
                                 </li>
                             </ul>
                         </div>
@@ -88,7 +89,7 @@
                                     <h4>08:00 - 16:30</h4>
                                 </li>
                                 <li>
-                                    <p class="p_14">Monday to Saturday</p>
+                                    <p class="p_14">Lunes a Sábado</p>
                                 </li>
                             </ul>
                         </div>
@@ -98,8 +99,7 @@
                             <div class="social-icons text-right">
                                 <ul>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -112,6 +112,7 @@
 
         <!-- Navbar Start -->
         <nav class="navbar navbar-default navbar-fixed navbar-transparent navbar-sticky dark bootsnav">
+
             <div class="container">
                 <div class="" id="search">
                     <button type="button" class="close">×</button>
@@ -123,74 +124,34 @@
                 </div>
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
-                            class="fa fa-bars"></i> </button>
-                    <a class="navbar-brand" href="#brand"> <img src="images/logo_white.png" class="logo logo-display"
-                            alt=""> <img src="images/logo.png" class="logo logo-scrolled" alt=""> </a>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                    <a class="navbar-brand" href="#brand">
+
+                        <img src="images/logo_white.png" class="logo logo-display" alt="">
+                        <img src="images/logo.png" class="logo logo-scrolled" alt="">
+
+                    </a>
                 </div>
                 <!-- End Header Navigation -->
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse nav_bor_bot" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Home</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="industry_index_1.html">Home Style 1</a></li>
-                                <li><a href="industry_index_2.html">Home Style 2</a></li>
-                                <li><a href="industry_index_3.html">Home Style 3</a></li>
-                            </ul>
-                        </li>
-                        <li class="cool-link_3"><a href="about_us_industry.html">About Us</a></li>
-                        <li class="dropdown cool-link_3 active"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Solution</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="solution_industry.html">Chemical Research</a></li>
-                                <li><a href="solution_industry.html">Agricultural Processing</a></li>
-                                <li><a href="solution_industry.html">Oil industry</a></li>
-                                <li><a href="solution_industry.html">Mechanical Engineering</a></li>
-                                <li><a href="solution_industry.html">Petroleum and Gas</a></li>
-                                <li><a href="solution_industry.html">Power and Energy</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Pages</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="project_industry.html">Projects</a></li>
-                                <li><a href="testinomial_industry.html">Testimonials</a></li>
-                                <li><a href="project_details_industry.html">Oil industry</a></li>
-                                <li><a href="our_team_industry.html">Our Team</a></li>
-                                <li><a href="faq_industry.html">FAQ's</a></li>
-                                <li><a href="pricing_table_industry.html">Pricing Table</a></li>
-                                <li><a href="404_error_industry.html">404 Error</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Blog</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="news_industry.html">News Style 1</a></li>
-                                <li><a href="news_2_industry.html">News Style 2</a></li>
-                                <li><a href="news_3_industry.html">News Style 3</a></li>
-                                <li><a href="news_4_industry.html">News Style 4</a></li>
-                                <li><a href="news_5_industry.html">News Style 5</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown cool-link_3"><a href="shop.html">Shop</a></li>
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Contact Us</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="contact_industry.html">Contact Style 1</a></li>
-                                <li><a href="contact_2_industry.html">Contact Style 2</a></li>
-                                <li><a href="contact_3_industry.html">Contact Style 3</a></li>
-                            </ul>
-                        </li>
-                        <li class="search"> <a href="#search"><i class="icon-icons185"></i></a></li>
+
+                        <!--Menu-->
+                        <li class="cool-link_3"><a href="index.html">Inicio</a></li>
+                        <li class="cool-link_3"><a href="about_us.html">Acerca de Nosotros</a></li>
+                        <li class="cool-link_3 active"><a href="products-services.html">Servicios y Productos</a></li>
+                        <li class="cool-link_3"><a href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
 
             </div>
         </nav>
+
     </header>
     <!-- Navbar End -->
 
@@ -198,8 +159,7 @@
     <section id="page_banner">
         <div class="container">
             <div class="page-header text-center">
-                <h2>Project Details</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h2>Servicios y Productos</h2>
             </div>
         </div>
     </section>
@@ -374,79 +334,81 @@
     <!-- Project Details End -->
 
     <!-- Footer Start -->
-    <footer id="footer_1" class="bg_blue p-t-100">
+    <footer id="footer" class="bg_blue p-t-100">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-12">
-                    <div class="footer_box_1"> <img src="images/logo_white.png" alt="image" class="img-responsive">
-                        <p class="p-t-30 p-b-30 footer_p">Benenatis mauris. Vestibulum ante the ipsum primis in
-                            industry, logistics, finance, business mauris.</p>
+                    <div class="footer_box_1">
+                        <img src="images/logo_white.png" alt="image" class="img-responsive">
+                        <p class="p-t-30 p-b-30 footer_p">Somos una empresa 100% mexicana, dedicada a la investigación,
+                            desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del
+                            aislamiento térmico y acústico para la industria.</p>
                         <div class="social-icons_1">
                             <ul>
                                 <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i aria-hidden="true" class="fa fa-vimeo"></i></a></li>
                             </ul>
+
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="footer_box_1">
-                        <h3>Quick Links</h3>
+                        <h3>Navegación</h3>
                         <ul class="footer_link_1">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Projects</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="about_us.html">Acerca de Nosotros</a></li>
+                            <li><a href="products-services.html">Servicios y Productos</a></li>
+                            <li><a href="contact.html">Contacto</a></li>
                         </ul>
-                        <ul class="footer_link_1 pull-right">
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Shop</a></li>
-                            <li><a href="#">Contact us</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-3 col-xs-12">
-                    <div class="footer_box_1">
-                        <h3>Latest Posts</h3>
-                        <div class="latest_footer">
-                            <h4><a href="#">Secure strong revenue growth</a></h4>
-                            <p>14 Feb 2016</p>
-                        </div>
-                        <div class="latest_footer">
-                            <h4><a href="#">Weekly meeting in companies Think Room</a></h4>
-                            <p>14 Feb 2016</p>
-                        </div>
 
                     </div>
                 </div>
 
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="footer_box_1">
-                        <h3>Get in Touch</h3>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-3 col-xs-12">
+                    <div class="footer_box_1">
+                        <h3>Ponte en contacto</h3>
                         <div class="footer_1_contact">
-                            <p><i class="icon-telephone114"></i>+1(123) 456 7890 - 1</p>
-                            <p><i class=" icon-icons142"></i>hello@copious.com</p>
-                            <p><i class=" icon-alarmclock"></i>Mon to Fri - 08:00 to 16:30</p>
-                            <br>
-                            <i class="icon-icons74"></i>
-                            <p>Manhattan Hall, Lacasa Ave Melbo
-                                <br>urne, 124BP Australia</p>
+                            <div class="adres_box">
+                                <p><i class="icon-telephone114"></i></p>
+                                <p>+01(52) 55 5236 1203</p>
+
+
+
+                            </div>
+                            <div class="adres_box">
+                                <p><i class=" icon-icons142"></i></p>
+                                <p>contacto@adimex.com.mx</p>
+                            </div>
+                            <div class="adres_box">
+                                <p><i class=" icon-alarmclock"></i></p>
+                                <p>Lunes a Sábado - 08:00 to 16:30</p>
+                            </div>
+                            <div class="adres_box">
+                                <p><i class="icon-icons74"></i></p>
+                                <p>De Los Pelícanos 04, Las Alamedas, Ciudad López Mateos, Méx.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="footer_botom m-t-80 p-t-20 p-b-20">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
-                        <p>Copyrights © 2017 Copious. All rights reserved.</p>
+                    <div class="col-md-7">
+                        <p>Copyrights © 2019 Adisa. Todos los derechos reservados.</p>
                     </div>
-                    <div class="col-md-6 text-right">
-                        <p>Made with <i class="icon-heart3"></i> by <a href="#">Brighthemes</a></p>
+                    <div class="col-md-5 text-right">
+                        <p>Página hecha por <a href="https://www.fobutec.com" target="_blank">Fobutec</a></p>
                     </div>
                 </div>
             </div>
