--- a/about_us.html
+++ b/about_us.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html dir="ltr" lang="en">
+<html dir="ltr" lang="es">
 
 <head>
-    <title>Copious / About Us</title>
+    <title>Adisa / Acerca de Nosotros</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.">
+    
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
@@ -80,10 +80,10 @@
                         <div class="get-tuch text-left"><i class="icon-telephone114"></i>
                             <ul>
                                 <li>
-                                    <h4>+1(123) 456 567</h4>
+                                    <h4>+01(52) 55 5236 1203</h4>
                                 </li>
                                 <li>
-                                    <p class="p_14">support@copious.com</p>
+                                    <p class="p_14">contacto@adimex.com.mx</p>
                                 </li>
                             </ul>
                         </div>
@@ -93,7 +93,7 @@
                                     <h4>08:00 - 16:30</h4>
                                 </li>
                                 <li>
-                                    <p class="p_14">Monday to Saturday</p>
+                                    <p class="p_14">Lunes a Sábado</p>
                                 </li>
                             </ul>
                         </div>
@@ -103,8 +103,7 @@
                             <div class="social-icons text-right">
                                 <ul>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -112,6 +111,7 @@
                 </div>
             </div>
         </div>
+
         <!-- Header Top End -->
 
         <!-- Navbar Start -->
@@ -143,58 +143,12 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse nav_bor_bot" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Home</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="industry_index_1.html">Home Style 1</a></li>
-                                <li><a href="industry_index_2.html">Home Style 2</a></li>
-                                <li><a href="industry_index_3.html">Home Style 3</a></li>
-                            </ul>
-                        </li>
-                        <li class="cool-link_3 active"><a href="about_us_industry.html">About Us</a></li>
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Solution</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="solution_industry.html">Chemical Research</a></li>
-                                <li><a href="solution_industry.html">Agricultural Processing</a></li>
-                                <li><a href="solution_industry.html">Oil industry</a></li>
-                                <li><a href="solution_industry.html">Mechanical Engineering</a></li>
-                                <li><a href="solution_industry.html">Petroleum and Gas</a></li>
-                                <li><a href="solution_industry.html">Power and Energy</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Pages</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="project_industry.html">Projects</a></li>
-                                <li><a href="testinomial_industry.html">Testimonials</a></li>
-                                <li><a href="project_details_industry.html">Oil industry</a></li>
-                                <li><a href="our_team_industry.html">Our Team</a></li>
-                                <li><a href="faq_industry.html">FAQ's</a></li>
-                                <li><a href="pricing_table_industry.html">Pricing Table</a></li>
-                                <li><a href="404_error_industry.html">404 Error</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Blog</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="news_industry.html">News Style 1</a></li>
-                                <li><a href="news_2_industry.html">News Style 2</a></li>
-                                <li><a href="news_3_industry.html">News Style 3</a></li>
-                                <li><a href="news_4_industry.html">News Style 4</a></li>
-                                <li><a href="news_5_industry.html">News Style 5</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown cool-link_3"><a href="shop_industry.html">Shop</a></li>
-                        <li class="dropdown cool-link_3"><a href="#" class="dropdown-toggle"
-                                data-toggle="dropdown">Contact Us</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="contact_industry.html">Contact Style 1</a></li>
-                                <li><a href="contact_2_industry.html">Contact Style 2</a></li>
-                                <li><a href="contact_3_industry.html">Contact Style 3</a></li>
-                            </ul>
-                        </li>
-                        <li class="search"> <a href="#search"><i class="icon-icons185"></i></a></li>
+
+                        <!--Menu-->
+                        <li class="cool-link_3"><a href="index.html">Inicio</a></li>
+                        <li class="cool-link_3 active"><a href="about_us.html">Acerca de Nosotros</a></li>
+                        <li class="cool-link_3"><a href="products-services.html">Servicios y Productos</a></li>
+                        <li class="cool-link_3"><a href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -209,8 +163,7 @@
     <section id="page_banner">
         <div class="container">
             <div class="page-header text-center">
-                <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h2>Acerca de Nosotros</h2>
             </div>
         </div>
     </section>
@@ -224,11 +177,10 @@
                     <div class="about_box">
                         <div class="heading">
                             <div class="heading_border bg_red"></div>
-                            <p>We started with a simple idea.</p>
-                            <h2>Company <span class="color_red">overview</span></h2>
+                            <p>Confianza y Seguridad.</p>
+                            <h2>Descripción <span class="color_red">de la empresa</span></h2>
                         </div>
-                        <p class="p-t-30 p-b-40 p_17">Copious is WP Aliquam ultrices venenatis mauris. Vestibulum ante
-                            ipsum primis in that faucibus orci luctus et.</p>
+                        <p class="p-t-30 p-b-40 p_17">Somos una empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.</p>
                         <p class="p-b-50 p_17">Aliquam ultrices venenatis mauris. Aliquam ultrices venenatis mauris.
                             Vestibulum industry, logistics, finance, business, power Aliquam ultrices venenatis mauris.
                             industry, logistics, finance, business, Power mauris Lorem ipsum dolor sit amet,
@@ -325,8 +277,8 @@
                 <div class="col-md-12 text-center">
                     <div class="heading">
                         <div class="heading_border_1 bg_red"></div>
-                        <p>DON'T TAKE OUR WORD</p>
-                        <h2>Our <span class="color_red">Team</span></h2>
+                        <p>no </p>
+                        <h2>NUESTRO <span class="color_red">Equipo</span></h2>
                     </div>
                 </div>
             </div>
@@ -492,8 +444,8 @@
                 <div class="col-md-12">
                     <div class="heading">
                         <div class="heading_border bg_red"></div>
-                        <p>Copious history</p>
-                        <h2>Company <span class="color_red">history</span></h2>
+                        <p>Historia de la Compañia</p>
+                        <h2>ADISA <span class="color_red">Historia</span></h2>
                     </div>
                 </div>
             </div>
@@ -504,7 +456,7 @@
 
                 <div class="col-md-1 col-sm-2 col-xs-12">
                     <div class="company_year">
-                        <h2 class="color_red">2008</h2>
+                        <h2 class="color_red">Falta</h2>
                     </div>
                 </div>
 
@@ -516,13 +468,8 @@
 
                 <div class="col-md-10 col-sm-8 col-xs-12">
                     <div class="company_text">
-                        <h3>Start with a small Business</h3>
-                        <p>Aliquam ultrices venenatis mauris. Vestibulum ante ipsum primis in industry, logistics,
-                            finance, business orci ultrices venenatis mauris. Aliquam ultrices primis in industry,
-                            logistics, finance, business orci Aliquam ultrices. Aliquam ultrices venenatis mauris.
-                            Vestibulum ante ipsum primis in industry, logistics, finance, business orci ultrices
-                            venenatis mauris. Aliquam ultrices venenatis mauris ante ipsum Vestibulum ante ipsum primis
-                            in industry, logistics, finance, business orci Aliquam ultrices.</p>
+                        <h3>Falta</h3>
+                        <p>Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,.</p>
                     </div>
                 </div>
 
@@ -544,10 +491,9 @@
 
                 <div class="col-md-10 col-sm-8 col-xs-12">
                     <div class="company_text">
-                        <h3>First Recognition</h3>
-                        <p>Aliquam ultrices venenatis mauris. Vestibulum ante ipsum primis in industry, logistics,
-                            finance, business orci ultrices venenatis mauris. Aliquam ultrices primis in industry,
-                            logistics, finance, business orci Aliquam ultrices.</p>
+                        <h3>Constitución de la Empresa</h3>
+                        <p>Se suman especialistas al proyecto Cimex y se constituye la empresa Aislamientos Desmontables Industriales, S.A. de C.V. para ofrecer alternativas a las diferentes necesidades de las empresas con dos gamas de productos principales Recubrimiento Reusable con la línea Maxi-Save ® y el convencional para Altas y bajas Temperaturas.
+                        </p>
                     </div>
                 </div>
 
@@ -612,15 +558,13 @@
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="footer_box_1">
                         <img src="images/logo_white.png" alt="image" class="img-responsive">
-                        <p class="p-t-30 p-b-30 footer_p">Benenatis mauris. Vestibulum ante the ipsum primis in
-                            industry, logistics, finance, business mauris.</p>
+                        <p class="p-t-30 p-b-30 footer_p">Somos una empresa 100% mexicana, dedicada a la investigación,
+                            desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del
+                            aislamiento térmico y acústico para la industria.</p>
                         <div class="social-icons_1">
                             <ul>
                                 <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i aria-hidden="true" class="fa fa-vimeo"></i></a></li>
                             </ul>
 
                         </div>
@@ -629,18 +573,12 @@
 
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="footer_box_1">
-                        <h3>Quick Links</h3>
+                        <h3>Navegación</h3>
                         <ul class="footer_link_1">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Projects</a></li>
-                        </ul>
-
-                        <ul class="footer_link_1 pull-right">
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Shop</a></li>
-                            <li><a href="#">Contact us</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="about_us.html">Acerca de Nosotros</a></li>
+                            <li><a href="products-services.html">Servicios y Productos</a></li>
+                            <li><a href="contact.html">Contacto</a></li>
                         </ul>
 
                     </div>
@@ -648,38 +586,32 @@
 
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="footer_box_1">
-                        <h3>Latest Posts</h3>
-                        <div class="latest_footer">
-                            <h4><a href="#">Secure strong revenue growth</a></h4>
-                            <p>14 Feb 2016</p>
-                        </div>
-                        <div class="latest_footer">
-                            <h4><a href="#">Weekly meeting in companies Think Room</a></h4>
-                            <p>14 Feb 2016</p>
-                        </div>
 
                     </div>
                 </div>
 
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="footer_box_1">
-                        <h3>Get in Touch</h3>
+                        <h3>Ponte en contacto</h3>
                         <div class="footer_1_contact">
                             <div class="adres_box">
                                 <p><i class="icon-telephone114"></i></p>
-                                <p>+1(123) 456 7890 - 1</p>
+                                <p>+01(52) 55 5236 1203</p>
+
+
+
                             </div>
                             <div class="adres_box">
                                 <p><i class=" icon-icons142"></i></p>
-                                <p>hello@copious.com</p>
+                                <p>contacto@adimex.com.mx</p>
                             </div>
                             <div class="adres_box">
                                 <p><i class=" icon-alarmclock"></i></p>
-                                <p>Mon to Fri - 08:00 to 16:30</p>
+                                <p>Lunes a Sábado - 08:00 to 16:30</p>
                             </div>
                             <div class="adres_box">
                                 <p><i class="icon-icons74"></i></p>
-                                <p>Manhattan Hall, Lacasa Ave Melbo urne, 124BP Australia</p>
+                                <p>De Los Pelícanos 04, Las Alamedas, Ciudad López Mateos, Méx.</p>
                             </div>
                         </div>
                     </div>
@@ -691,10 +623,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7">
-                        <p>Copyrights © 2017 Copious. All rights reserved.</p>
+                        <p>Copyrights © 2019 Adisa. Todos los derechos reservados.</p>
                     </div>
                     <div class="col-md-5 text-right">
-                        <p>Made with <i class="icon-heart3"></i> by <a href="#">Brighthemes</a></p>
+                        <p>Página hecha por <a href="https://www.fobutec.com" target="_blank">Fobutec</a></p>
                     </div>
                 </div>
             </div>
