--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html dir="ltr" lang="es-ES">
+<html dir="ltr" lang="es">
 
 <head>
-    <title>Copious / Contact Us</title>
+    <title>Adisa / Contacto</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.">
+
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
@@ -142,10 +142,10 @@
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 
                         <!--Menu-->
-                        <li class="cool-link_3"><a href="about_us_industry.html">Inicio</a></li>
-                        <li class="cool-link_3"><a href="about_us_industry.html">Acerca de Nosotros</a></li>
-                        <li class="cool-link_3"><a href="about_us_industry.html">Servicios y Productos</a></li>
-                        <li class="cool-link_3"><a href="conctact.html">Contacto</a></li>
+                        <li class="cool-link_3"><a href="index.html">Inicio</a></li>
+                        <li class="cool-link_3"><a href="about_us.html">Acerca de Nosotros</a></li>
+                        <li class="cool-link_3"><a href="products-services.html">Servicios y Productos</a></li>
+                        <li class="cool-link_3 active"><a href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -339,10 +339,10 @@
                     <div class="footer_box_1">
                         <h3>Navegación</h3>
                         <ul class="footer_link_1">
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Acerca de Nosotros</a></li>
-                            <li><a href="#">Servicios y Productos</a></li>
-                            <li><a href="conctact.html">Contacto</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="about_us.html">Acerca de Nosotros</a></li>
+                            <li><a href="products-services.html">Servicios y Productos</a></li>
+                            <li><a href="contact.html">Contacto</a></li>
                         </ul>
 
                     </div>
@@ -360,19 +360,22 @@
                         <div class="footer_1_contact">
                             <div class="adres_box">
                                 <p><i class="icon-telephone114"></i></p>
-                                <p>+1(123) 456 7890 - 1</p>
+                                <p>+01(52) 55 5236 1203</p>
+
+
+
                             </div>
                             <div class="adres_box">
                                 <p><i class=" icon-icons142"></i></p>
-                                <p>hello@copious.com</p>
+                                <p>contacto@adimex.com.mx</p>
                             </div>
                             <div class="adres_box">
                                 <p><i class=" icon-alarmclock"></i></p>
-                                <p>Mon to Fri - 08:00 to 16:30</p>
+                                <p>Lunes a Sábado - 08:00 to 16:30</p>
                             </div>
                             <div class="adres_box">
                                 <p><i class="icon-icons74"></i></p>
-                                <p>Manhattan Hall, Lacasa Ave Melbo urne, 124BP Australia</p>
+                                <p>De Los Pelícanos 04, Las Alamedas, Ciudad López Mateos, Méx.</p>
                             </div>
                         </div>
                     </div>
