--- a/about_us.html
+++ b/about_us.html
@@ -181,10 +181,7 @@
                             <h2>Descripción <span class="color_red">de la empresa</span></h2>
                         </div>
                         <p class="p-t-30 p-b-40 p_17">Somos una empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.</p>
-                        <p class="p-b-50 p_17">Aliquam ultrices venenatis mauris. Aliquam ultrices venenatis mauris.
-                            Vestibulum industry, logistics, finance, business, power Aliquam ultrices venenatis mauris.
-                            industry, logistics, finance, business, Power mauris Lorem ipsum dolor sit amet,
-                            consectetur.</p>
+                        <p class="p-b-50 p_17">Contamos con más de 20 años de experiencia ofreciendo los mejores aislantes térmicos y acústicos de la mejor calidad, con marcas de renombre que respaldan nuestros productos y servicios.</p>
                         <p class="p_17">Vestibulum industry, logistics, finance, business, power Aliquam ultrices
                             venenatis mauris. industry, logistics, finance, business, consectetur.</p>
                     </div>
@@ -277,7 +274,7 @@
                 <div class="col-md-12 text-center">
                     <div class="heading">
                         <div class="heading_border_1 bg_red"></div>
-                        <p>no </p>
+                        <p>Nosotros </p>
                         <h2>NUESTRO <span class="color_red">Equipo</span></h2>
                     </div>
                 </div>
@@ -427,9 +424,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2>Clean & Modern design </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor
-                        exercitationemut labore.</p>
+                    <h2>Calidad y Confianza </h2>
+                    <p>Nos aseguramos que nuestros productos y servicios cumplan los más altos estándares de calidad.</p>
                 </div>
             </div>
         </div>
