--- a/index.html
+++ b/index.html
@@ -174,31 +174,29 @@
                         data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:0;y:0;s:inherit;e:inherit;"
                         data-start="800">
                         <div class="heading_border bg_red"></div>
-                        <h2>Industrial <span class="color_red text_bold">Business</span></h2>
+                        <h2>Empresa <span class="color_red text_bold">Mexicana</span></h2>
                         <br>
-                        <p>We are manufacturing Products with world class
-                            <br>Quality. Targeting business, Advisor, Industry high
-                            <br>impact exploration.</p>
+                        <p>Somos una empresa 100% mexicana, dedicada a la investigación, 
+                            <br>desarrollo y uso de nuevas tecnologías con el fin de crear soluciones
+                            <br>en el campo del aislamiento térmico y acústico para la industria.</p>
                         <br>
-                        <a href="about_us_industry.html" class="btn-light">Get Started</a>
+                        <a href="about_us.html" class="btn-light">Conoce más</a>
                     </div>
                 </li>
                 <li data-transition="fade"> <img src="images/banner_8.jpg" alt="" data-bgposition="center center"
                         data-bgfit="cover">
-                    <div class="tp-caption  tp-resizeme banner_3_box text-left" data-x="left" data-y="360"
+                    <!---->
+                    <div class="tp-caption  tp-resizeme banner_3_box text-left" data-x="left" data-y="500"
                         data-width="full" data-transform_idle="o:1;"
                         data-transform_in="y:[-200%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
                         data-transform_out="auto:auto;s:1000;e:Power3.easeInOut;"
                         data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:0;y:0;s:inherit;e:inherit;"
                         data-start="800">
                         <div class="heading_border bg_red"></div>
-                        <h2>Leading <span class="color_red text_bold">Feature</span></h2>
+                        <h2>Confianza <span class="color_red text_bold">y </span>Seguridad</h2>
                         <br>
-                        <p>We are manufacturing Products with world class
-                            <br>Quality. Targeting business, Advisor, Industry high
-                            <br>impact exploration.</p>
                         <br>
-                        <a href="about_us_industry.html" class="btn-light">Get Started</a>
+                        <a href="about_us.html" class="btn-light">Conoce más</a>
                     </div>
 
                 </li>
@@ -211,13 +209,13 @@
                         data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:0;y:0;s:inherit;e:inherit;"
                         data-start="800">
                         <div class="heading_border bg_red"></div>
-                        <h2>Creative <span class="color_red text_bold">Theme</span></h2>
+                        <h2>Aislamientos <span class="color_red text_bold">Térmicos</span></h2>
                         <br>
-                        <p>We are manufacturing Products with world class
-                            <br>Quality. Targeting business, Advisor, Industry high
-                            <br>impact exploration.</p>
+                        <p>Ofreciendo los mejores aislamientos térmicos para la industria
+                            <br>con productos únicos como lo es el recubrimiento Rusable Maxi-Save®
+                            <br>desarrollado por nuestros expertos.</p>
                         <br>
-                        <a href="about_us_industry.html" class="btn-light">Get Started</a>
+                        <a href="products-services.html" class="btn-light">Get Started</a>
                     </div>
 
                 </li>
@@ -361,24 +359,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Over then <span class="color_red">7000</span> Happy Customer</h2>
+                    <h2>Más de <span class="color_red">20 años</span> de experiencia en la industria.</h2>
                     <div class="bg_text_box p-t-80">
                         <i class="icon-presentation"></i>
                         <br>
-                        <h3>Good Sale & Marketing</h3>
+                        <h3>Crecimiento</h3>
                         <br>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-                            <br>elit, sed diam power nonummy nibh tempor cum
-                            <br>soluta nobis eleifend.</p>
+                        <p>Nuestros más de 20 años de experiencia nos hacen expertos
+                            <br>en el desarrollo, venta e instalación de aislamientos
+                            <br>para la industria internacional.</p>
                     </div>
                     <div class="bg_text_box p-t-80">
                         <i class="icon-trophy"></i>
                         <br>
-                        <h3>Good Sale & Marketing</h3>
+                        <h3>Reconocimientos</h3>
                         <br>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-                            <br>elit, sed diam power nonummy nibh tempor cum
-                            <br>soluta nobis eleifend.</p>
+                        <p>Adisa cuenta con el respaldo, el reconocimiento
+                            <br> y la confianza de diversas empresas de talla internacional
+                            <br> como Nestle, Jumex y Phillip Morris por mencionar algunos.</p>
                     </div>
                 </div>
             </div>
@@ -394,8 +392,8 @@
                 <div class="col-md-12 text-center">
                     <div class="heading">
                         <div class="heading_border bg_red"></div>
-                        <p>DON'T TAKE OUR WORD</p>
-                        <h2>Clients <span class="color_red">Feedback</span></h2>
+                        <p>OPINIONES</p>
+                        <h2>LO QUE NUESTROS <span class="color_red">CLIENTES </span>DICEN</h2>
                     </div>
                 </div>
             </div>
