--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                 <div class="recent_project_3_slider owl-carousel">
                     <div class="item">
                         <div class="recent_box">
-                            <a href="solution_industry.html">
+                            <a href="products-services.html">
                                 <div class="image_s"><img src="images/recent_1.jpg" alt="image"></div>
                                 <div class="recent_text">
-                                    <h3>Chemical Research</h3>
-                                    <p>Biotechnology solutions for industry.</p>
+                                    <h3>Recubrimiento Reusable <br> Maxi-Save ®</h3>
+                                    <p>Tecnología única en la industria.</p>
                                 </div>
                             </a>
                         </div>
@@ -263,24 +263,16 @@
                             </a>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="recent_box">
-                            <a href="solution_industry.html">
-                                <div class="image_s"><img src="images/recent_1.jpg" alt="image"></div>
-                                <div class="recent_text">
-                                    <h3>Chemical Research</h3>
-                                    <p>Biotechnology solutions for industry.</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
+                
                 </div>
             </div>
             <div class="row">
+                <br><br><br>
+            </div>
+            <div class="row">
                 <div class="col-md-12">
-                    <p class="p_24 rece_text_2">We work on the forefront of innovation and technology to take products
-                        from an idea
-                        <br> all the way to the end consumer.</p>
+                    <p class="p_24 rece_text_2">Trabajamos bajo los más rigurosos estándares de calidad para entregarte a ti y a tu empresa productos
+                        <br> con la más alta calidad.</p>
                 </div>
             </div>
         </div>
@@ -295,7 +287,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="feature_box">
                         <i class="icon-briefcase2"></i>
-                        <h3>Manufacturing</h3>
+                        <h3>Manufactura</h3>
                         <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
                             ultrices venenatis mauris.</p>
                     </div>
@@ -304,7 +296,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="feature_box">
                         <i class="icon-globe"></i>
-                        <h3>Product Delivery</h3>
+                        <h3>Alcance</h3>
                         <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
                             ultrices venenatis mauris.</p>
                     </div>
@@ -313,7 +305,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="feature_box">
                         <i class="icon-lock5"></i>
-                        <h3>Safe Place for you</h3>
+                        <h3>Seguridad</h3>
                         <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
                             ultrices venenatis mauris.</p>
                     </div>
@@ -325,7 +317,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="feature_box">
                         <i class="icon-thumb-up"></i>
-                        <h3>100% Purity</h3>
+                        <h3>100% Confiables</h3>
                         <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
                             ultrices venenatis mauris.</p>
                     </div>
@@ -334,7 +326,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="feature_box">
                         <i class="icon-gears"></i>
-                        <h3>Maintenance</h3>
+                        <h3>Funcionamiento</h3>
                         <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance, business orci
                             ultrices venenatis mauris.</p>
                     </div>
